# isu.rs

./: .gitignore  Cargo.toml  Config.toml  README.md  package.json
app/: Cargo.toml  package.json
app/src/: main.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
assets/: demo_test1.xml
audio/: Cargo.toml
client/: package.json
client/src-tauri/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  parse.rs
common/src/models/: demo.rs  mod.rs  section.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/img/: mod.rs
core/src/models/: demo.rs  mod.rs  section.rs  step.rs
core/src/xml/: mod.rs
elec/: package-lock.json  package.json
front/: package-lock.json
iced/: Cargo.toml
img/: Cargo.toml
nwg/: Cargo.toml
nwg/src/: main.rs
parse/: Cargo.toml
public/: global.css
services/: Cargo.toml
services/src/: lib.rs
services/src/models/: step.rs
services/wasm/: Cargo.toml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml
src-tauri/src/: handlers.rs  main.rs
src/pages/: _layout.svelte  index.svelte
tauri/src-tauri/src/: cmd.rs  handlers.rs
ui/: Cargo.toml
ui/src/: main.rs
