[package]
name = "core"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
quick_xml = "*"
serde = "*"
serde_derive = "*"
uuid = "*"
rayon = "*"
dirs = "*"
walkdir = "2"
tempfile = "*"
open = "*"
fs_extra = "*"
nom = "*"
lexical = "*"
config = { version="*", features=["toml"] }
chrono = "*"

# xi = "*"
# clokwerk = "*"
