[package]
name = "core"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
image = "*"
quick-xml = { version = "*", features = ["encoding", "serialize"] }
serde = { version = "*", features = [ "derive" ] }
serde_derive = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
rayon = "*"
dirs = "*"
walkdir = "2"
dirs = "*"
tempfile = "*"
open = "*"
#fs_extra = "*"
#nom = "*"
pest="*"
#lexical = "*"
#chrono = "*"
#anyhow = "*"
docx = "*"
#deepspeech="*"
# xi = "*"
# clokwerk = "*"

[dev-dependencies]
config = { version="*", features=["toml"] }
