[package]
name = "isu-rs"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "isu-rs"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }
image = "*"
quick-xml = { version = "*", features = [ "encoding", "serialize" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
rayon = "*"
walkdir = "2"
tempfile = "*"
nom = "*"
chrono = "*"
docx = "*"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "isu-rs"
path = "src/main.rs"
