[package]
name = "ui"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
tokio = { version = "0.2", features = ["full"] }
iced = { version="*", features=[
  "image", "canvas", "tokio",
] }
iced_core = "*"
iced_native = "*"
iced_winit = "*"
iced_wgpu = "*"
